--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "ODE0NjA4NzA3NDEyMjk1Nzgw.YDgVeg.HvMJ4jRnJPfxjBa9QdmdcnN1pvE",
+  "TOKEN": "ODczMzA0NzQ3NjAyNDg5MzY0.YQ2ebQ._Nami4AcDJm43oSylDa2GLlWPz0",
   "PREFIX": "$",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
